[gd_scene load_steps=3 format=3 uid="uid://dnvtlx487t314"]

[ext_resource type="Script" uid="uid://7ksbufkcpylj" path="res://scripts/game_manager.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://d1q2w3e4r5t6y" path="res://scenes/battle_ui.tscn" id="2_battle_ui"]

[node name="MainArena" type="Node2D"]

[node name="GameManager" type="Node" parent="." groups=["game_manager"]]
script = ExtResource("1_abcde")

[node name="OpponentTimer" type="Timer" parent="GameManager"]
wait_time = 3.0
autostart = true

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
rendering_quadrant_size = 32
format = 2
layer_0/name = "Ground"

[node name="BattleUI" parent="." instance=ExtResource("2_battle_ui")]
